src/app/home/home.component.scss
.map
{
    display: inline-block;
    
    margin-top: 40px;
    margin-bottom: 20px;
    // margin-left:20%;
    margin-right:20%;
    height: 354px;
    width: 1000px;
    background-image: url("../../assets/img/Middle-East-Map.jpg");

}
img.responsive-img{
  margin-top: 10px;
  margin-bottom: 10px;
  width: 90%;
}
.col-12 {
    width: 100;
}

.col-13{
    flex: 25%;
    float: left;
    margin: 0%;
}
.col-14 {
    flex: 75%;
    float: left;
}

.row {
    display: flex;
}


.map:hover
{
    background-position: -1000px 0;
}
// .heading
// {
//     display: inline-block;
//     margin-left: 120px;
//     margin-bottom: 100px;
//     height: 140px;
//     width: 400px;
//     background-image: url("../../assets/img/Heading.png");
// }
// .heading:hover
// {
//     background-position: -407px 0;
// }
h3
{
    color: #454552;
    margin-bottom: 0;
}
.one
{
    height:100ch;
    overflow:auto;
    border: 5px transparent #f1f1f1;
    border-radius: 7px;
    background-color: #f1f1f1;
}
.two
{
    height:100ch;
    overflow:auto;
    border: 5px transparent #f1f1f1;
    border-radius: 7px;
    background-color: #f1f1f1;
}

// ================ Button =====================

.button
{
    // display: inline-block;
    //float: left;
    // margin-top: 40px;
    // margin-bottom: 200px;
    height: 40px;
    left: 0;
    display: inline-block;
    border-radius: 4px;
    background-color: #FD999A;
    border: none;
    color: #FFFFFF;
    text-align: center;
    font-size: 15px;
    padding: 10px;
    width: 150px;
    transition: all 0.5s;
    cursor: pointer;
    vertical-align:center;

}
.button span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
  }
  
  .button span:after {
    content: '+';
    font-size: 15px;
    position: absolute;
    opacity: 0;
    top: 0;
    right: -20px;
    transition: 0.5s;
  }
  
  .button:hover{
    background-color:#8ABBDB;
  }
  .button:hover span {
    padding-right: 25px;
    
  }
  
  .button:hover span:after {
    opacity: 1;
    right: 0;
  }


.user-guide
{
    display: inline-block;
    // margin-right: 20%;
}
// ================Select the login and registration page =====================
body
{
    // margin: 0;
    // padding: 0;
   
    width:100%;
    height:100%;
    background-image: url("../../assets/img/1.png");
    background-size:100% 100%;
    // position: absolute;
    position: absolute;
    left: 0;
    top:0;


}


.container
{
    position: absolute;
   
    top: 45%;
    left: 50%;
    transform: translate(-50%,-50%);
    width: 800px;
    height: 500px;
    border-radius: 7px;
    border:0px solid rgba(255, 255, 255, .2);
    box-shadow :  10px 10px 15px rgba(0, 0, 0, .3);

}

.imgBx
{
    float: left;
   
    width: 420px;
    height: 500px;
    overflow: hidden;

}
.imgBx img
{
    width: 100%;
    height: 100%;
}

.select
{
    
    float: right;
    left: 20px;
    width: 350px;
    height: 500px;
    box-sizing: border-box;
    padding:  15px 40px;
    background-color: rgba(255, 255, 255,.3);
  
}
.select .btn-primary 
{
   
    margin-top: 30px;
    // margin-left: 5px;
    // margin-right: 20px;
    width: 100%;
    border: 1px solid #454552;
    outline: none ;
    height: 45px;
    font-size: 16px;    
    background: transparent;
    cursor: pointer;
    color:  #454552 ;
    font-weight: bold;    
}
.select .mr-2
{
    margin-top: 250px;
    // margin-left: 5px;
    // margin-right: 20px;
    width: 100%;
    border: 1px solid #454552;
    outline: none ;
    height: 45px;
    font-size: 16px;    
    background: transparent;
    cursor: pointer;
    color:  #454552 ;
    font-weight: bold;   
}

.see-more {
  margin-bottom: 40px;
  color: black;
  
}

.see-more:hover {
  text-decoration: underline;
  cursor: pointer;
}

.content 
{
  border: 5px solid #A3A3A3;
}

.select .btn-primary:hover,
.select .mr-2:hover
{
    background-color: #454552;
    color:#FFFFF3;
}

.card-date
{
  background-color: #E1EEF6;
  font-size: 20px;
  color: #4eadda;
  width: 100%;
}

.grey-text{
    color: grey-text;
    margin-bottom: 0;
  }

.card-panel
{
  background-color: #E1EEF6;
  font-size: 20px;
  width: 100%;
  margin: inherit;
  margin-top: 10px;
}

a{
  color:#666666;
}

.text-fix
{
  overflow-wrap:break-word;
  word-wrap:break-word;
}

.bold-text
{
    color: black;
    font-size:xx-large;
}

.twitterHandle {
    margin-top: 0px;
    font-size: 12px;
    color: lightseagreen;
  }

.fit-box
{
    width: 100%;
}

::ng-deep img {
    max-width: 100%;
  }

  /* width */
::-webkit-scrollbar {
    width: 10px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: #f1f1f1; 
    box-shadow: inset 0 0 14px 14px transparent;
    border: solid 4px transparent;
    border-radius: 14px;

  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #888; 
    border: solid 4px transparent;
    border-radius: 14px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555; 
  }

